# QMLSimpleModuleTest

./: .qmllint.ini  CMakeLists.txt  ChartItem.qml  main.cpp
qml/MyQuick/: CMakeLists.txt
